syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.flo.grpclb";
option java_outer_classname = "LoadBalancingProto";

package loadbalancingproto;

service LoadBalancingManager {
    rpc GetClientStatus(ClientRequest) returns (ClientStatus) {}

    rpc SetMaxClients(SetMaxClientsRequest) returns (SetMaxClientsReply) {}
}

message ClientRequest {

}

message ClientStatus {
    int32 nbClients = 1;
    int32 maxNbClients = 2;
}

message SetMaxClientsRequest {
    int32 maxNbClients = 1;
}

message SetMaxClientsReply {
    
}
